<?xml version="1.0"?>
<package format="3">
  <name>rl_interface</name>
  <version>0.0.0</version>
  <description>ROS2 package for reinforcement learning interface</description>
  <maintainer email="minwen.mao@epfl.ch">minwen</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclpy</depend>
  <depend>gymnasium</depend>
  <depend>stable_baselines3</depend>
  <depend>env_builder_msgs</depend>
  <depend>ament_python</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
